Add: matches getter
